--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Rock Paper Scissors</title>
 
-    <link rel="stylesheet" href="styles/rock-paper-scissors.css">
+    <link rel="stylesheet" href="rock-paper-scissors.css">
 
   </head>
   <body>
@@ -38,7 +38,7 @@
     <button class="auto-play-button" >Auto Play</button>
 
 
-    <script src="scripts/rock-paper-scissors.js"></script>
+    <script src="rock-paper-scissors.js"></script>
 
   </body>
 </html>
